--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+faiss_cpu==1.7.3
 joblib==1.2.0
 mrob==0.0.11
 networkx==3.0
@@ -5,3 +6,8 @@ nptyping==2.5.0
 numpy==1.24.2
 open3d==0.17.0
 opencv_python==4.7.0.72
+Pillow==9.4.0
+pytorch_lightning==2.0.0
+torch==2.0.0
+torchvision==0.15.1
+tqdm==4.65.0
