--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ numpy==1.24.2
 open3d==0.17.0
 opencv_python==4.7.0.72
 Pillow==9.4.0
+pytest==7.2.2
 pytorch_lightning==2.0.0
 scikit_learn==1.2.2
 scipy==1.10.1
