--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,7 +18,12 @@ jobs:
         with:
           python-version: "3.10"
 
-      - run: pip install pdoc
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pdoc
+
       - run: pdoc ./vprdb -o ./docs
 
       - name: Deploy
