Added master target branch in docs workflow

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - docs
+      - master
 
 jobs:
   # Build the documentation and upload the static HTML files as an artifact.
